[package]
name = "binius_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
binius_core = { path = "../core" }
binius_field = { path = "../field", default-features = false }
binius_math = { path = "../math" }
binius_utils = { path = "../utils", default-features = false, features = [
    "rayon",
] }
paste.workspace = true
rand.workspace = true

[lib]
proc-macro = true
