[package]
name = "binius_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
binius_core = { path = "../core", default-features = false }
binius_fast_compute ={ path = "../fast_compute", default-features = false }
binius_field = { path = "../field", default-features = false }
binius_math = { path = "../math", default-features = false }
binius_utils = { path = "../utils", default-features = false }
paste.workspace = true
rand.workspace = true

[lib]
proc-macro = true

[features]
default = ["nightly_features"]
nightly_features = [
    "binius_core/nightly_features",
    "binius_field/nightly_features",
]
