[package]
name = "binius_math"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field" }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
auto_impl.workspace = true
bytemuck.workspace = true
either.workspace = true
getset.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true
stackalloc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
itertools.workspace = true
proptest.workspace = true
rand = { workspace = true, features = ["std_rng"] }

[lib]
bench = false

[[bench]]
name = "fold"
harness = false


[[bench]]
name = "tensor_prod_eq_ind"
harness = false
