[package]
name = "binius_maybe_rayon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
either = { optional = true, workspace = true }
itertools = { optional = true, workspace = true }
rayon = { optional = true, workspace = true }

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
