[package]
name = "binius_ntt"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius_field = { path = "../field" }
binius_math = { path = "../math"}
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
lazy_static.workspace = true
proptest.workspace = true

[lib]
bench = false

[[bench]]
name = "additive_ntt"
harness = false
