[package]
name = "binius_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
bytes.workspace = true
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
cfg-if.workspace = true
generic-array.workspace = true
itertools.workspace = true
thiserror.workspace = true
thread_local.workspace = true

[dev-dependencies]
rand.workspace = true

[features]
default = ["rayon"]
bail_panic = []
stable_only = []
rayon = ["binius_maybe_rayon/rayon"]
